# smart-replenishment

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.vps  Makefile  README.md  docker-compose.vps.yml  docker-compose.yml  pyproject.toml
configs/: base.yaml
deploy/: Caddyfile.fragment  vps.env.example
docs/: data_dictionary.md  decisions.md  deployment.md  methodology.md  rubric_evidence.md
notebooks/: 01_data_quality_and_eda.ipynb  02_model_analysis.ipynb
reports/: data_quality.json  metrics.json  val_metrics.pkl
src/smart_replenishment/: __init__.py  cli.py  config.py
src/smart_replenishment/api/: main.py
src/smart_replenishment/dashboard/: app.py
src/smart_replenishment/data/: ingest.py  mart.py  quality.py
src/smart_replenishment/evaluation/: backtest.py  metrics.py  statistics.py
src/smart_replenishment/features/: build.py
src/smart_replenishment/models/: baselines.py  catboost.py  lgbm.py
src/smart_replenishment/simulation/: inventory.py
tests/: test_api.py  test_baselines.py  test_metrics.py
