[project]
name = "smart-replenishment"
version = "0.1.0"
description = "Smart Replenishment: Demand forecasting and inventory replenishment support system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.22.0",
    "duckdb>=0.9.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "streamlit>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "plotly>=5.15.0",
    "httpx>=0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
